--- a/css/home.css
+++ b/css/home.css
@@ -48,7 +48,7 @@ header img {
 }
 
 strong {
-    font-size: 3rem;
+    font-size: 2rem;
     color: #4c4343;
     font-family: 'Athiti', sans-serif;
 }
@@ -56,7 +56,7 @@ strong {
 .fa-star {
     font-size: 1rem;
     color: #950000;
-    margin: 0.2em;
+    margin:10px;
 
 }
 
@@ -99,9 +99,11 @@ h1 {
     text-align: center;
     font-size: 1.5rem;
 }
-
-section h1,
-h2,
+section h1{
+    font-size: 15px;
+    text-align: center;
+}
+section h2,
 h3 {
     text-align: center;
 }
@@ -299,6 +301,7 @@ strong {
     text-align:left;
 }
 .welcome h1 {
+    font-size: 3rem;
     margin-bottom:4em;
 }
 .menus {
@@ -322,6 +325,7 @@ h2 {
     margin-top:8em;
 }
 .menus h2 {
+    font-size: 30px;
     margin-bottom:4em;
 }
 
